Stop wrapping main nav on narrow displays

--- a/bootstrap/less/digitalwhanganui.less
+++ b/bootstrap/less/digitalwhanganui.less
@@ -153,7 +153,7 @@ input.search-input {
     > a {
       position: relative;
       display: block;
-      padding: 10px 30px 10px 0px;
+      padding: 10px 20px 10px 0px;
       &:hover,
       &:focus {
         text-decoration: underline;
